fix: correct CORS origin configuration and update API gateway routing rules